# reading-rainbow

./: Cargo.toml  LICENSE  README.md  log.txt
src/: gui.rs  logger.rs  main.rs  status.rs  sweep.rs  worker.rs
