[package]
name = "reading-rainbow"
version = "0.1.0"
authors =["Nikki Zivkov <nzivkov@ucsb.edu>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.84"

[dependencies]
egui = "0.30"
eframe = "0.30"
serde = { version = "1", features = ["derive"] }
egui_plot = "0.30.0"
colorous = "1.0.15"
ndarray-npy = "0.9.1"
ndarray = "0.16.1"
serde_json = "1.0.137"
num-complex = "0.4.6"
capnp = "0.20.3"
capnp_conv = "0.3.2"
capnp_conv_macros = "0.3.2"
gen3_rpc = { git = "https://github.com/MazinLab/gen3_rpc", version = "0.1.0" }
tokio = { version = "1", features = ["full", "macros", "net", "rt"] }
futures = "0.3"
num = "0.4.3"
capnp-rpc = "0.20.3"  # Corrected name
tokio-util = { version = "0.7.13", features = ["net", "compat"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }